<resources>
    <string name="app_name">悦跑</string>
    <string name="action_settings">设置</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>


    <string name="tab_contact">音乐</string>
    <string name="tab_found">天气</string>
    <string name="tab_me">我</string>

    <string name="editPic">编辑头像</string>
    <string name="action_self">个人信息</string>
    <string name="wheelView">年龄</string>
    <string name="action_update">更新</string>
    <string name="action_about">关于</string>

    <string name="lorem_ipsum">哈发发</string>

    <!--        shenxm      -->
    <string name="default_city">北京</string>
    <string name="weather_detail"><![CDATA[天气详情>]]></string>
    <string name="aqi_cond">空气质量：</string>
    <string name="dafault_color">良好</string>
    <string name="today_sun">日出日落</string>
    <string name="weather_api">以上数据来源于和风天气</string>
    <string name="week_weather">未来一周天气</string>
    <string name="today_weather">今日详情</string>
    <string name="life_weather">生活指数</string>
    <string name="life_cmf">舒适度</string>
    <string name="life_drsg">穿衣指数</string>
    <string name="life_flu">感冒指数</string>
    <string name="life_sport">运动指数</string>
    <string name="life_trav">旅游指数</string>
    <string name="life_uv">紫外线</string>
    <string name="life_cw">洗车指数</string>

    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="play_pause">play or pause</string>

    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>
    <string name="run_shoes_knowledge">新手选鞋的步骤
        \n\n首先，我们先确定鞋子的使用场景：使用的方式是进行训练还是比赛？使用的地点是在路面，田径场，还是户外？最后是你的训练频率以及训练距离？这样基本就决定了，你要的是一双越野鞋还是路跑鞋，是轻量的竞赛鞋还是正常的慢跑鞋或者训练鞋。
        \n\n第二步，我们可以确定能实际测量的定量的参数：脚长、脚围和体重。确定这三个参数就可以决定自己鞋子的尺码以及鞋子的承重能力。需要注意的是，和鞋子尺码有关的参数最好要在下午测，因为这个时候脚会略微膨胀，测得的数据以大的为准，然后根据脚长和脚围的数据对照每家品牌的官方尺码表。体重这个主要针对的是所谓的顶级，次顶级，一般的话，男性体重超过75kg，女性体重超过60kg就可以考虑入手顶级款的跑鞋了。
        \n\n第三步，主要是确定一些和自己跑步习惯有关的定性参数：足弓类型，内旋程度（也就是内外翻），还有就是审美与信仰。这样就决定自己该选支撑款，缓冲款还是控制款了，以及用哪一家鞋了。
        \n\n最后一步，如果可以的话，那就是锦上添花了。去实体店试鞋，不嫌麻烦的话，某宝的无理由退换也是可以考虑的。
    </string>
    <string name="run_function_knowledge">很多人会想跑步有什么方法，迈开腿跑就是了，其实还是有很多方法的，我就将两种基本的吧。
        \n\n前脚掌跑法（男生比较合适）顾名思义，就是跑步时候落地前脚掌先落地（人天生就这么跑，你光脚跑跑试试），这样跑得好处是减少对膝盖的压迫，并且提速相对快。这样跑的时候你会觉得很容易提速度，无法压制速度，这个要注意，其实慢慢跑也可以用前脚掌跑法的，只是跑姿不好看。可以推荐一下《跑步，該怎麼跑》这本书，非常好，女生也可以看看，这本书对前脚掌跑法有比较详细的介绍（网上应该有电子版了）。当然前脚掌跑法的缺点就是，会腿粗，小腿会很变粗，这也是不推荐女生的原因。
        \n\n后脚掌跑法（女生比较合适）女生由于跑量不高，而且比较担心跑步会粗腿，所以还是推荐后脚掌跑法，也是跟名字一样，后脚掌落地先，不过这样的跑法不建议太快，速度放慢些，因为这个跑法对膝盖有压迫，速度慢一些比较好，如果跑得很快膝盖长时间压迫，很容易受伤，会很疼，就得不偿失了。其实不一定非得后脚掌，或者后大半个脚丫落地都可以。不过这个跑法建议不要超过1小时为佳。
        \n\n女生特别是学生党，在学校跑圈非常好。
        \n\n注意：跑完后不要马上蹲下或者坐下，这样肉会堆积在臀部。建议跑完后逐步减速到走路，然后走2~3分钟，再做拉伸即可。跑后喝水一小口一小口地喝，
        不要一次一大口，容易呛到。</string>run_time_knowledge
    <string name="run_time_knowledge">按照对膝盖压迫由小到大的顺序应该是： 草地>塑胶>柏油路>水泥路 
        \n\n能跑塑胶跑道最好，不能跑的话只能选择柏油路了。水泥路太硬对膝盖压迫大，就不建议了。而且如果你体重过大，还是建议尽量跑塑胶跑道把，对你们膝盖着想。（下面我会针对不同体重的人说下具体的问题）锻炼地点可以选择公园或者其他绿化较好的地方，不过还是请遵守交通规则，如果遇到红灯，要提前减
速，不要突然停下，对膝盖不好。 
        \n\n时间的话建议下午4、5点最好，这个时候据说是植物呼出氧气的时候，上班族的话建议晚上吧，但是最好在饭后两小时后这样为佳。 
        \n\n在这里说下晨练，晨练固然好，只是空气不太好，如果晨练的话，建议还是不要空腹，稍微垫一下，大概一两片面包一小杯热水即可。
        空腹伤胃，稍微垫下吧。我一般周末都会选择晨跑的。虽然空气不好，但是跑完洗完澡整个人还是很舒服的。</string>

    <string name="run_warm_up_knowledge">一个常规的跑前热身拉伸程序：
        \n\n1、首先活动膝关节（摇晃活动膝盖），踝关节（脚尖着地摇晃腿部），髋关节（双手掐腰来回转动腰部），腕关节（双手相握，晃手腕），颈椎（转动颈部），转腰（就是左右扭腰，活动开你的脊柱），然后做10~20个深蹲，慢跑1圈（400米）热身。（其实这些热身体育课上都学过）
        \n\n2、回来后进行简单的拉伸，主要拉伸股四头肌，腘绳肌群，腰背肌群，臀部和小腿肌群。（每个动作保持15秒左右）
        \n\n3、进行正式的跑步
        \n\n4、跑步完成后进行系统的拉伸练习，这次拉伸的时间要比跑前长些，每个动作保持30秒左右。如果有条件还可以做按摩放松下肌肉，没人帮忙按摩的话可以使用“泡沫轴”进行辅助按摩，效果也不错。
        \n\n下面介绍一些拉伸方法，拉伸方法有很多，只介绍几种常见的，整个拉伸过程中主要以静态拉伸为主，当然也可以根据自己的情况进行动态拉伸，就是有节奏性的“振压”。</string>

    <string name="run_clothes_knowledge">由于大家可能在任何地方。我就以国内的四季为例说下吧。（跑鞋单独说） 
               \n\n春天秋天： 
               \n\n双层穿衣法（8℃~14℃） 
               \n\n1、上身和下身穿速干（有条件可以考虑压缩衣好压缩裤）+上身薄的抓绒+下身短裤或者其他薄裤子即可。下身也可以单传一条薄的抓绒裤也可以。 
               \n\n这里的穿法原因是，因为这两个季节可能有风，而且气温相比夏天有了明显下降，速干或者压缩衣有效帮你快速排汗，而抓绒有效保暖，这样的话跑起来不冷（不过跑起来不要停下来很长时间。最后能坚持一直跑到回家）。如果怕额头
               又汗感冒，可以带个魔术头巾包着即可。 
               \n\n2、有些牌子有保暖压缩衣和压缩裤直接穿就行（例如skins）。 
               \n\n冬天： 三层穿衣法 
             \n\n其实很简单，就是在双层穿衣的基础上套一个防风外套，就可以了，裤子可以是里面穿速干，外面穿一条防风裤即可。冬天不要追求速度，慢慢慢跑就行，至于怎么穿合适，也可以靠自己体感，就是你穿着一身出去感觉有点冷，但不是冷的刺骨就行。跑步过程中如果出汗可以考虑拉开一点拉链或者衣服系在腰上即
             可。天冷的时候可以带个冷帽。 
        \n\n夏天： 
        \n\n随便你怎么穿。想怎么穿怎么穿，反正回家洗。怎么舒服怎么穿，想穿速干穿速干，想穿纯棉穿纯棉，想穿短裤穿短裤，想穿长裤随便！ 
        \n\n至于衣服的牌子，便宜的话，迪卡侬之流或者国产都很好。贵的话，cw-x或者skins都可以。看自己能力。关键是有句话叫使用率决定性价比。</string>


</resources>
