<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#27A5F9">

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/search"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/share"
            android:onClick="shareButtonClick"/>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/app_name"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/run"/>
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/tab_contact"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/music"/>
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/tab_found"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/weather"/>
        <com.tsunami.run.happyrun.utils.ChangeColorWithTest
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            hyman:color1="#27A5F9"
            hyman:text="@string/tab_me"
            hyman:text_size="12sp"
            hyman:icon1="@drawable/me"/>

    </LinearLayout>

</LinearLayout>
