<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weather_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginStart="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_cond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/aqi_cond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi_cond"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/weather_aqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/aqi_cond"/>
            <TextView
                android:id="@+id/aqi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_aqi"
                android:layout_alignParentEnd="true"
                android:paddingEnd="10dp"/>
            <TextView
                android:id="@+id/aqi_color"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/dafault_color"
                android:layout_toStartOf="@id/aqi_text"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/weather_aqi"
                android:layout_marginTop="3dp"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/weather_tmp_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"/>

        <com.tsunami.run.happyrun.views.UnderLineTv
            android:id="@+id/weather_to_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_detail"
            android:layout_below="@+id/weather_tmp_now"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/tv_weather_detail"/>

        <TextView
            android:id="@+id/weather_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
</LinearLayout>